2008-11-06  Badlop  <badlop@process-one.net>

	* src/extauth.erl: When the extauth call fails or timeouts, deny
	authorization. Use two timeouts: 60s for script initialization and
	10s for regular calls. (thanks to Kevin Crosbie from
	Ravenpack) (EJAB-627)

2008-11-03  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_c2s.erl: Disable zlib when STARTTLS is required

2008-10-27  Badlop  <badlop@process-one.net>

	* src/Makefile.in (clean-local): Delete also ejabberdctl.example

2008-10-25  Badlop  <badlop@process-one.net>

	* src/translate.erl: When a translation file can't be loaded, show
	detailed error message

	* src/ejabberd_ctl.erl: If ejabberd didn't start correctly:
	'ejabberdctl status' suggests to look in log files; any other
	ejabberdctl command shows 'status'.

	* src/ejabberd_app.erl: Open ejabberd.log sooner, so errors during
	ejabberd initialization are logged in that file (EJAB-777). Write
	a log message when ejabberd finishes the start or stop.

2008-10-24  Badlop  <badlop@process-one.net>

	* src/ejabberd_c2s.erl: Ensure unique ID in roster push (EJAB-721)
	* src/mod_roster.erl: Likewise
	* src/mod_roster_odbc.erl: Likewise
	* src/mod_shared_roster.erl: Likewise

	* src/ejabberd_listener.erl: Fix listeners
	* src/ejabberd_sup.erl: Likewise
	* src/gen_mod.erl: Likewise

2008-10-23  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_frontend_socket.erl: Fixed SSL sockets

2008-10-17  Badlop  <badlop@process-one.net>

	* src/Makefile.in: docdir should be prefixed with DESTDIR (thanks
	to Jack Moffitt)(EJAB-775)

2008-10-17  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix badarg issue on get_roster_info
	when allowed roster groups is not defined

	* src/mod_pubsub/mod_pubsub.erl: fix remove_user not unsubscribing
	user (EJAB-684)

	* src/mod_pubsub/node_default.erl: does not write item when max_items
	set to 0 (solves EJAB-768)
